--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card m-2">
             <form class="card-body">
                 <h5 class="card-title">Hacker's Console</h5>
-                <p><b>Support:</b> Complete JavaScript expressions.</p>
+                <p><b>To:</b> Hack This Game!</p>
                 <p class="d-inline-flex gap-1">
                     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#help">
                         Examples
@@ -44,16 +44,16 @@
                 <div class="collapse" id="help">
                     <div class="card card-body">
                         <h6>Change Score</h6>
-                        <pre><code class="language-js">scoreA = 1; // Change score of player A
-scoreB = 1; // Change score of player B</code></pre>
+                        <pre><code class="language-js">scoreA = 1; // Changes Score of Player A
+scoreB = 1; // Changes Score of Player B</code></pre>
                         <h6>Change Paddle Properties</h6>
                         <pre><code class="language-js">// You can replace "paddleA" with "paddleB"
 // in these examples.
 paddleA.height = 10; // Change height
 paddleA.width = 10; // Change width
-paddleA.x = 10; // Change x position (breaks the game!)
+paddleA.x = 10; // Change x position
 paddleA.y = 10; // Change y position</code></pre>
-                        <h6>Change Ball Properties</h6>
+                        <h6>Change the Ball's Properties</h6>
                         <pre><code class="language-js">x = 10; // x position
 y = 10; // y position
 dx = 5; // horizontal speed (resets when you touch the wall)
@@ -63,12 +63,12 @@ dy = 5; // vertical speed (also resets)</code></pre>
 canvas.width // Canvas width
 canvas.height // Canvas height
 
-alert() // Display stuff using an annoying popup window.
-document.write() // Display stuff, but replaces the whole website.</code></pre>
+alert() // Display Game in my website
+document.write() // Display the Game, but replace the whole website. Just go back!</code></pre>
                     </div>
                 </div>
                 <input id="terminal" class="form-control mt-1 mb-1">
-                <button id="execute" type="button" class="btn btn-success mb-1 mt-1">Hack!</button>
+                <button id="execute" type="button" class="btn btn-success mb-1 mt-1">Run Some Code!</button>
             </form>
         </div>
         <script>
