--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+<!-- Can't Copy Me! -->
     <title>Web Pong!</title>
   </head>
   <body>
@@ -56,8 +56,8 @@ paddleA.y = 10; // Change y position</code></pre>
                         <h6>Change the Ball's Properties</h6>
                         <pre><code class="language-js">x = 10; // x position
 y = 10; // y position
-dx = 5; // horizontal speed (resets when you touch the wall)
-dy = 5; // vertical speed (also resets)</code></pre>
+dx = 5; // horizontal speed (Can't Copy Me!)
+dy = 5; // vertical speed </code></pre>
                         <h6>Useful Constants & Functions</h6>
                         <pre><code class="language-js">canvas // HTML canvas element
 canvas.width // Canvas width
