--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <canvas class="m-2" id="canvas" width="720" height="480"></canvas>
         <div class="card m-2">
             <form class="card-body">
+            <h5 style="font-size:1em ;"> The controls for player a is W and S, and player B is up arrow key and down arrow key. You MUST full screen this tab! </h5>
                 <h5 class="card-title">Hacker's Console</h5>
                 <p><b>To:</b> Hack This Game!</p>
                 <p class="d-inline-flex gap-1">
