--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <canvas class="m-2" id="canvas" width="720" height="480"></canvas>
         <div class="card m-2">
             <form class="card-body">
-            <h5 style="font-size:1em ;"> The controls for player a is W and S, and player B is up arrow key and down arrow key. You MUST full screen this tab! </h5>
                 <h5 class="card-title">Hacker's Console</h5>
-                <p><b>To:</b> Hack This Game!</p>
+                <p><b>Controls:</b> Player A: W and S. Player B: Up and Down Arrow Key! (You MUST full screen this tab!)</p>
                 <p class="d-inline-flex gap-1">
                     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#help">
                         Examples
@@ -97,7 +96,7 @@ document.write() // Display the Game, but replace the whole website. Just go bac
                 this.y = canvas.height / 2 - this.height / 2;
 
                 // Key pressed
-                this.upPressed = false;
+                this.upPressed = true;
                 this.downPressed = false;
 
                 // Functions
@@ -146,7 +145,7 @@ document.write() // Display the Game, but replace the whole website. Just go bac
                 x += dx;
                 y += dy;
 
-                // Bounce the ball if it hits the edge of the canvas
+                // Bounce The Ball
                 if (y + dy < ballRadius) dy = -dy;
                 if (y + dy > canvas.height - ballRadius) dy = -dy;
 
@@ -166,7 +165,7 @@ document.write() // Display the Game, but replace the whole website. Just go bac
                 }
             }
 
-            // Restarts the ball
+            // Redos the ball to it's original position
             function restartBall() {
                 x = canvas.width / 2;
                 y = Math.floor(Math.random() * canvas.height);
