--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ paddleA.y = 10; // Change y position</code></pre>
                         <h6>Change the Ball's Properties</h6>
                         <pre><code class="language-js">x = 10; // x position
 y = 10; // y position
-dx = 5; // horizontal speed (Can't Copy Me!)
+dx = 5; // horizontal speed 
 dy = 5; // vertical speed </code></pre>
                         <h6>Useful Constants & Functions</h6>
                         <pre><code class="language-js">canvas // HTML canvas element
@@ -96,7 +96,7 @@ document.write() // Display the Game, but replace the whole website. Just go bac
                 this.y = canvas.height / 2 - this.height / 2;
 
                 // Key pressed
-                this.upPressed = true;
+                this.upPressed = false;
                 this.downPressed = false;
 
                 // Functions
