--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ document.write() // Display the Game, but replace the whole website. Just go bac
                 }, false);
             }
 
-            // Paddles
-            const paddleA = new Paddle(100, 10, 0, "w", "s");
+            // Paddle Height
+            const paddleA = new Paddle(100, 5, 0, "w", "s");
             const paddleB = new Paddle(100, 10, canvas.width - 10, "ArrowUp", "ArrowDown");
 
             function drawBall() {
