--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ document.write() // Display the Game, but replace the whole website. Just go bac
             let dy = -4;
             
             // Paddle constructor
-            function Paddle(height, width, x, upKey, downKey) {
+            function Paddle(height, width, x, i, k) {
                 // Properties
                 this.height = height;
                 this.width = width;
