--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <h5 class="card-title">Hacker's Console</h5>
                 <p><b>To:</b>Hack This Game!</p>
                 <p class="d-inline-flex gap-1">
-                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#help">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#examples">
                         Examples
                     </button>
                 </p>
-                <div class="collapse" id="help">
+                <div class="collapse" id="examples">
                     <div class="card card-body">
                         <h6>Change Score</h6>
                         <pre><code class="language-js">scoreA = 1; // Change score of player A
