--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <div class="card m-2">
             <div class="card-body">
                 <h5 class="card-title">Instructions</h5>
-                <p>Use <code>W</code> and <code>S</code> to move Player A (left) and <code>I</code> and <code>K</code> to move Player B (right)</p>
+                <p>Use <code>W</code> and <code>S</code> to move Player A on the left, and <code>I</code> and <code>K</code> to move Player B on the right.</p>
             </div>
         </div>
         <div class="card m-2">
             <form class="card-body">
                 <h5 class="card-title">Hacker's Console</h5>
-                <p><b>To:</b>Hack This Game!</p>
+                <p><b>Support:</b> Complete JavaScript expressions.</p>
                 <p class="d-inline-flex gap-1">
-                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#examples">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#help">
                         Examples
                     </button>
                 </p>
-                <div class="collapse" id="examples">
+                <div class="collapse" id="help">
                     <div class="card card-body">
                         <h6>Change Score</h6>
                         <pre><code class="language-js">scoreA = 1; // Change score of player A
