--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div class="card m-2">
             <div class="card-body">
                 <h5 class="card-title">Instructions</h5>
-                <p>Use <code>W</code> and <code>S</code> to move Player A on the left, and <code>I</code> and <code>K</code> to move Player B on the right.</p>
+                <p>Use <code>W</code> and <code>S</code> to move Player A (left) and <code>I</code> and <code>K</code> to move Player B (right)</p>
             </div>
         </div>
         <div class="card m-2">
             <form class="card-body">
                 <h5 class="card-title">Hacker's Console</h5>
-                <p><b>Support:</b> Complete JavaScript expressions.</p>
+                <p><b>To:</b> Hack This Game!</p>
                 <p class="d-inline-flex gap-1">
                     <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#help">
                         Examples
@@ -41,17 +41,17 @@
                         <pre><code class="language-js">scoreA = 1; // Change score of player A
 scoreB = 1; // Change score of player B</code></pre>
                         <h6>Change Paddle Properties</h6>
-                        <pre><code class="language-js">// You can replace "paddleA" with "paddleB"
+                        <pre><code class="language-js">// You can switch the paddles!
 // in these examples.
-paddleA.height = 10; // Change height
-paddleA.width = 10; // Change width
-paddleA.x = 10; // Change x position (breaks the game!)
-paddleA.y = 10; // Change y position</code></pre>
-                        <h6>Change Ball Properties</h6>
-                        <pre><code class="language-js">x = 10; // x position
-y = 10; // y position
-dx = 5; // horizontal speed (resets when you touch the wall)
-dy = 5; // vertical speed (also resets)</code></pre>
+paddleA.height = 10; // Change Height
+paddleA.width = 10; // Change Width
+paddleA.x = 10; // Change X! (breaks the game!)
+paddleA.y = 10; // Change Y</code></pre>
+                        <h6> Ball Properties</h6>
+                        <pre><code class="language-js">x = 10; // x 
+y = 10; // y 
+dx = 5; // horizontal speed 
+dy = 5; // vertical speed </code></pre>
                         <h6>Useful Constants & Functions</h6>
                         <pre><code class="language-js">canvas // HTML canvas element
 canvas.width // Canvas width
